chore: update tournament info

--- a/site/index.html
+++ b/site/index.html
@@ -21,74 +21,6 @@
 
 <div
   class="card"
-  data-start-time="1731772800"
-  data-end-time="1731913200"
->
-  <img
-    src="assets/cards/donTParkOnTheGrass2024.webp"
-    alt="Don't Park on the Grass 2024 banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Don't Park on the Grass 2024</h2>
-    <h4>November 16 - November 17</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Cody Schwab</li>
-        <li>Jmook</li>
-        <li>Plup</li>
-        <li>aMSa</li>
-        <li>Zain</li>
-        <li>moky</li>
-        <li>Leffen</li>
-        <li>Hungrybox</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=4001%20E%20Stevens%20Way%20NE%2C%20Seattle%2C%20WA%2098195%2C%20USA"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Seattle, WA"
-      >
-        Seattle, WA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 888
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/don-t-park-on-the-grass-2024/event/melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Don't Park on the Grass 2024"
-        >Start.gg</a
-      >
-      <a
-        href="https://images.start.gg/images/profileWidgetPageLayout/2675798/image-bb853830037353f8f1df47baf444cb9a-optimized.png"
-        target="_blank"
-        class="card-button"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Don't Park on the Grass 2024"
-        >Schedule</a
-      >
-      <a
-        href="https://www.twitch.tv/btssmash"
-        target="_blank"
-        class="card-button"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Don't Park on the Grass 2024"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
-<div
-  class="card"
   data-start-time="1733587200"
   data-end-time="1733720340"
 >
@@ -123,7 +55,7 @@
         data-umami-event-location="Brooklyn, NY"
       >
         Brooklyn, NY </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 13
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 16
     </p>
     <hr />
     <div class="buttons">
@@ -136,17 +68,17 @@
         >Start.gg</a
       >
       <a
-        href=""
+        href="https://www.start.gg/tournament/nounsvitational-2024/details"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="schedule-clicked"
         data-umami-event-name="Nounsvitational 2024"
         >Schedule</a
       >
       <a
-        href=""
+        href="https://www.twitch.tv/nounsesports"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="stream-clicked"
         data-umami-event-name="Nounsvitational 2024"
         >Stream</a
@@ -171,14 +103,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
+        <li>Cody Schwab</li>
+        <li>Hungrybox</li>
+        <li>Salt</li>
+        <li>Fiction</li>
+        <li>Jmook</li>
+        <li>Wizzrobe</li>
+        <li>Axe</li>
+        <li>Ben</li>
       </ul>
     </div>
     <hr />
@@ -191,7 +123,7 @@
         data-umami-event-location="Kissimmee, FL"
       >
         Kissimmee, FL </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 75
     </p>
     <hr />
     <div class="buttons">
@@ -204,9 +136,9 @@
         >Start.gg</a
       >
       <a
-        href=""
+        href="https://www.start.gg/tournament/platfight-gaming-championships/details"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="schedule-clicked"
         data-umami-event-name="Platfight Gaming Championships"
         >Schedule</a
@@ -242,11 +174,11 @@
         <li>Jmook</li>
         <li>Aklo</li>
         <li>Krudo</li>
-        <li>Lucky</li>
+        <li>Azel</li>
         <li>Hungrybox</li>
         <li>Axe</li>
-        <li>Azel</li>
-        <li>Mot$</li>
+        <li>Khalid</li>
+        <li>Lucky</li>
       </ul>
     </div>
     <hr />
@@ -259,7 +191,7 @@
         data-umami-event-location="Marietta, GA"
       >
         Marietta, GA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 9
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 14
     </p>
     <hr />
     <div class="buttons">
@@ -307,14 +239,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>lloD</li>
-        <li>Axe</li>
-        <li>CPU0</li>
-        <li>Squid</li>
+        <li>Aklo</li>
         <li>Magi</li>
         <li>Fiction</li>
-        <li>Stiv</li>
-        <li>Zeo</li>
+        <li>CPU0</li>
+        <li>lloD</li>
+        <li>Axe</li>
+        <li>Khalid</li>
+        <li>Gahtzu</li>
       </ul>
     </div>
     <hr />
@@ -327,7 +259,7 @@
         data-umami-event-location="San Jose, CA"
       >
         San Jose, CA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 398
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 460
     </p>
     <hr />
     <div class="buttons">
