feat: add Battle of BC 7 and Full Bloom 2025

--- a/site/index.html
+++ b/site/index.html
@@ -87,6 +87,142 @@
   </div>
 </div>
 
+<div
+  class="card"
+  data-start-time="1743181200"
+  data-end-time="1743397200"
+>
+  <img
+    src="assets/cards/battleOfBc76.webp"
+    alt="Battle of BC 7 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Battle of BC 7</h2>
+    <h4>March 28 - March 30</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Cody Schwab</li>
+        <li>Jmook</li>
+        <li>Leffen</li>
+        <li>KoDoRiN</li>
+        <li>Zain</li>
+        <li>moky</li>
+        <li>aMSa</li>
+        <li>Axe</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=Canada%20Place%2C%20999%20Canada%20Pl%2C%20Vancouver%2C%20BC%20V6C%203E1%2C%20Canada"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Vancouver, BC"
+      >
+        Vancouver, BC </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 165
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/battle-of-bc-7-6/event/main-event-melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Battle of BC 7"
+        >Start.gg</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Battle of BC 7"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Battle of BC 7"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1743854400"
+  data-end-time="1743998340"
+>
+  <img
+    src="assets/cards/fullBloom2025.webp"
+    alt="Full Bloom 2025 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Full Bloom 2025</h2>
+    <h4>April 05 - April 06</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Cody Schwab</li>
+        <li>Jmook</li>
+        <li>Mang0</li>
+        <li>Aklo</li>
+        <li>Zain</li>
+        <li>moky</li>
+        <li>Wizzrobe</li>
+        <li>Joshman</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=900%20E%207th%20St%2C%20Bloomington%2C%20IN%2047405%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Unknown, IN"
+      >
+        Unknown, IN </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 194
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/full-bloom-2025/event/melee-singles"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Full Bloom 2025"
+        >Start.gg</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Full Bloom 2025"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Full Bloom 2025"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
 
     <!-- begin footer -->
   </div>
