feat: update email template with card

--- a/site/index.html
+++ b/site/index.html
@@ -39,7 +39,7 @@
         <li>Jmook</li>
         <li>Plup</li>
         <li>Hungrybox</li>
-        <li>Zain</li>
+        <li style="text-decoration: line-through;">Zain</li>
         <li>moky</li>
         <li>aMSa</li>
         <li>Mang0</li>
@@ -65,7 +65,7 @@
         class="card-button"
         data-umami-event="start-gg-clicked"
         data-umami-event-name="Genesis X2"
-        >Start.gg</a
+        >Bracket</a
       >
       <a
         href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSAegaKKOT2_D2iyOB-vbo_cZu3H1u6sS7OeBcWy2MqaeAkQMIao-BpIULAFys1jOcgd_Ei9IHk9B0y/pubhtml?gid=912548972&single=true"
@@ -123,7 +123,7 @@
         data-umami-event-location="Vancouver, BC"
       >
         Vancouver, BC </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 217
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 222
     </p>
     <hr />
     <div class="buttons">
@@ -133,7 +133,7 @@
         class="card-button"
         data-umami-event="start-gg-clicked"
         data-umami-event-name="Battle of BC 7"
-        >Start.gg</a
+        >Bracket</a
       >
       <a
         href=""
@@ -173,12 +173,12 @@
       <ul class="featured-players-columns">
         <li>Cody Schwab</li>
         <li>Jmook</li>
-        <li>Mang0</li>
-        <li>Aklo</li>
+        <li>Hungrybox</li>
+        <li>Wizzrobe</li>
         <li>Zain</li>
         <li>moky</li>
-        <li>Wizzrobe</li>
-        <li>Joshman</li>
+        <li>Mang0</li>
+        <li>Aklo</li>
       </ul>
     </div>
     <hr />
@@ -191,7 +191,7 @@
         data-umami-event-location="Unknown, IN"
       >
         Unknown, IN </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 279
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 304
     </p>
     <hr />
     <div class="buttons">
@@ -201,7 +201,7 @@
         class="card-button"
         data-umami-event="start-gg-clicked"
         data-umami-event-name="Full Bloom 2025"
-        >Start.gg</a
+        >Bracket</a
       >
       <a
         href=""
@@ -259,7 +259,7 @@
         data-umami-event-location="Chicago, IL"
       >
         Chicago, IL </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 49
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 56
     </p>
     <hr />
     <div class="buttons">
@@ -269,7 +269,7 @@
         class="card-button"
         data-umami-event="start-gg-clicked"
         data-umami-event-name="Unranked"
-        >Start.gg</a
+        >Bracket</a
       >
       <a
         href="https://images.start.gg/images/profileWidgetPageLayout/2286808/image-4cce23cfa7e6029b37862b6bd3f79180-optimized.png"
