--- a/ssg/src/html/templateCard.html
+++ b/ssg/src/html/templateCard.html
@@ -44,7 +44,7 @@
         class="card-button"
         data-umami-event="start-gg-clicked"
         data-umami-event-name="{{name}}"
-        >Start.gg</a
+        >Bracket</a
       >
       <a
         href="{{schedule-url}}"
