fix: tweak meta descrption and favicon

--- a/site/index.html
+++ b/site/index.html
@@ -1,160 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="The Largest Upcoming Melee Events | Next major: Tipped Off 16: Safari • June 07 - June 08 • Atlanta, GA • 469 attendees"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="assets/favicon/favicon.png" />
+    <script src="script.js"></script>
+    <script
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="2e6188c4-56e6-49cc-bd9e-511523dc3fb7"
+    ></script>
+    <title>Melee Majors</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The Largest Upcoming Melee Events">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="assets/favicon/favicon.webp">
-  <script src="script.js"></script>
-  <script defer src="https://cloud.umami.is/script.js" data-website-id="2e6188c4-56e6-49cc-bd9e-511523dc3fb7"></script>
-  <title>Melee Majors</title>
-</head>
-
-<body class="dark-mode">
-  <div class="fixed-position"></div>
-  <h1 class="title">Melee Majors</h1>
-  <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
-  <div class="background-gradient"></div>
-  <div class="card-container">
-
-<div
-  class="card"
-  data-start-time="1747404000"
-  data-end-time="1747627140"
->
-  <img
-    src="assets/cards/fullHouse2025.webp"
-    alt="Full House 2025 banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Full House 2025</h2>
-    <h4>May 16 - May 18</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Cody Schwab</li>
-        <li>Jmook</li>
-        <li>Hungrybox</li>
-        <li>Aklo</li>
-        <li>Zain</li>
-        <li>moky</li>
-        <li>Mang0</li>
-        <li>Trif</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=Pocono%20Mountains%2C%20Pennsylvania%2C%20USA"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Unknown, PA"
-      >
-        Unknown, PA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 16
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/full-house-2025/event/melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Full House 2025"
-        >Bracket</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Full House 2025"
-        >Schedule</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Full House 2025"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
-<div
-  class="card"
-  data-start-time="1748008800"
-  data-end-time="1748232000"
->
-  <img
-    src="assets/cards/comboBreaker2025.webp"
-    alt="COMBO BREAKER 2025 banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>COMBO BREAKER 2025</h2>
-    <h4>May 23 - May 25</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=1551%20Thoreau%20Dr%20N%2C%20Schaumburg%2C%20IL%2060173%2C%20USA"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Schaumburg, IL"
-      >
-        Schaumburg, IL </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/combo-breaker-2025/event/super-smash-bros-melee"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="COMBO BREAKER 2025"
-        >Bracket</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="COMBO BREAKER 2025"
-        >Schedule</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="COMBO BREAKER 2025"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
+  <body class="dark-mode">
+    <div class="fixed-position"></div>
+    <h1 class="title">Melee Majors</h1>
+    <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
+    <div class="background-gradient"></div>
+    <div class="card-container">
 <div
   class="card"
   data-start-time="1749308400"
@@ -191,7 +60,7 @@
         data-umami-event-location="Atlanta, GA"
       >
         Atlanta, GA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 303
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 469
     </p>
     <hr />
     <div class="buttons">
@@ -239,14 +108,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
+        <li>Hungrybox</li>
+        <li>lloD</li>
+        <li>Panda</li>
+        <li>Gahtzu</li>
+        <li>Wizzrobe</li>
+        <li>Krudo</li>
+        <li>MOF</li>
+        <li>Dawson</li>
       </ul>
     </div>
     <hr />
@@ -259,7 +128,7 @@
         data-umami-event-location="Orlando, FL"
       >
         Orlando, FL </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 187
     </p>
     <hr />
     <div class="buttons">
@@ -375,14 +244,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>Schlag</li>
-        <li>Fluid</li>
-        <li>Easy</li>
-        <li>regEx</li>
-        <li>Majersk</li>
-        <li>HOBORG</li>
-        <li>Ikana</li>
-        <li>Seal</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
       </ul>
     </div>
     <hr />
@@ -395,7 +264,7 @@
         data-umami-event-location="Chicago, IL"
       >
         Chicago, IL </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 85
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 103
     </p>
     <hr />
     <div class="buttons">
@@ -531,7 +400,7 @@
         data-umami-event-location="Sandusky, OH"
       >
         Sandusky, OH </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 84
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 145
     </p>
     <hr />
     <div class="buttons">
