feat: add manual overrides for any info on a tournament card

--- a/site/index.html
+++ b/site/index.html
@@ -73,17 +73,17 @@
         >Bracket</a
       >
       <a
-        href=""
+        href="https://images.start.gg/images/profileWidgetPageLayout/3454875/image-1a40fd0ea306ff203f5da126651dee44.png"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="schedule-clicked"
         data-umami-event-name="Tipped Off 16: Safari"
         >Schedule</a
       >
       <a
-        href=""
+        href="https://twitch.tv/mang0"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="stream-clicked"
         data-umami-event-name="Tipped Off 16: Safari"
         >Stream</a
@@ -167,11 +167,11 @@
 >
   <img
     src="assets/cards/getOnMyLevelForeverCanadianFightingGameChampionships.webp"
-    alt="Get On My Level: Forever - Canadian Fighting Game Championships banner image"
+    alt="Get On My Level: Forever banner image"
     class="image"
   />
   <div class="card-content">
-    <h2>Get On My Level: Forever - Canadian Fighting Game Championships</h2>
+    <h2>Get On My Level: Forever</h2>
     <h4>July 04 - July 06</h4>
     <div class="featured-players">
       <u>Featured Players</u>
@@ -205,7 +205,7 @@
         target="_blank"
         class="card-button"
         data-umami-event="start-gg-clicked"
-        data-umami-event-name="Get On My Level: Forever - Canadian Fighting Game Championships"
+        data-umami-event-name="Get On My Level: Forever"
         >Bracket</a
       >
       <a
@@ -213,7 +213,7 @@
         target="_blank"
         class="card-button hidden"
         data-umami-event="schedule-clicked"
-        data-umami-event-name="Get On My Level: Forever - Canadian Fighting Game Championships"
+        data-umami-event-name="Get On My Level: Forever"
         >Schedule</a
       >
       <a
@@ -221,7 +221,7 @@
         target="_blank"
         class="card-button hidden"
         data-umami-event="stream-clicked"
-        data-umami-event-name="Get On My Level: Forever - Canadian Fighting Game Championships"
+        data-umami-event-name="Get On My Level: Forever"
         >Stream</a
       >
     </div>
@@ -244,14 +244,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
+        <li>Schlag</li>
+        <li>Easy</li>
+        <li>Majersk</li>
+        <li>Ikana</li>
+        <li>Fluid</li>
+        <li>regEx</li>
+        <li>HOBORG</li>
+        <li>Seal</li>
       </ul>
     </div>
     <hr />
