feat: add supernova 2025

--- a/site/index.html
+++ b/site/index.html
@@ -176,14 +176,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
+        <li>Cody Schwab</li>
+        <li>Jmook</li>
+        <li>aMSa</li>
+        <li>Wizzrobe</li>
+        <li>Zain</li>
+        <li>moky</li>
+        <li>Hungrybox</li>
+        <li>Aklo</li>
       </ul>
     </div>
     <hr />
@@ -196,7 +196,7 @@
         data-umami-event-location="Toronto, ON"
       >
         Toronto, ON </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 773
     </p>
     <hr />
     <div class="buttons">
@@ -264,7 +264,7 @@
         data-umami-event-location="Chicago, IL"
       >
         Chicago, IL </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 103
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 122
     </p>
     <hr />
     <div class="buttons">
@@ -400,7 +400,7 @@
         data-umami-event-location="Sandusky, OH"
       >
         Sandusky, OH </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 145
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 161
     </p>
     <hr />
     <div class="buttons">
@@ -426,6 +426,74 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Riptide 2025"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1754578800"
+  data-end-time="1754872200"
+>
+  <img
+    src="assets/cards/supernova2025.webp"
+    alt="Supernova 2025 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Supernova 2025</h2>
+    <h4>August 07 - August 10</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=4320%20Chantilly%20Shopping%20Center%2C%20Chantilly%2C%20VA%2020151%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Chantilly, VA"
+      >
+        Chantilly, VA </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/supernova-2025/event/melee-1v1-singles-free-to-enter-wr-merch-included"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Supernova 2025"
+        >Bracket</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Supernova 2025"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Supernova 2025"
         >Stream</a
       >
     </div>
