fix: sort tournaments by date

--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The Largest Upcoming Melee Events | Next major: Tipped Off 16: Safari • June 07 - June 08 • Atlanta, GA • 469 attendees"
+      content="The Largest Upcoming Melee Events | Next major: Get On My Level: Forever • July 04 - July 06 • Toronto, ON • 775 attendees"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/favicon/favicon.png" />
@@ -24,142 +24,6 @@
     <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
     <div class="background-gradient"></div>
     <div class="card-container">
-<div
-  class="card"
-  data-start-time="1749308400"
-  data-end-time="1749434400"
->
-  <img
-    src="assets/cards/tippedOff16Safari.webp"
-    alt="Tipped Off 16: Safari banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Tipped Off 16: Safari</h2>
-    <h4>June 07 - June 08</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Cody Schwab</li>
-        <li>Jmook</li>
-        <li>Plup</li>
-        <li>Hungrybox</li>
-        <li>Zain</li>
-        <li>moky</li>
-        <li>aMSa</li>
-        <li>Mang0</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=Cherokee%20Ave%20SE%2C%20Atlanta%2C%20GA%2030315%2C%20USA"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Atlanta, GA"
-      >
-        Atlanta, GA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 469
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/tipped-off-16-safari/event/melee-singles"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Tipped Off 16: Safari"
-        >Bracket</a
-      >
-      <a
-        href="https://images.start.gg/images/profileWidgetPageLayout/3454875/image-1a40fd0ea306ff203f5da126651dee44.png"
-        target="_blank"
-        class="card-button"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Tipped Off 16: Safari"
-        >Schedule</a
-      >
-      <a
-        href="https://twitch.tv/mang0"
-        target="_blank"
-        class="card-button"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Tipped Off 16: Safari"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
-<div
-  class="card"
-  data-start-time="1749823200"
-  data-end-time="1750039200"
->
-  <img
-    src="assets/cards/ceo20256.webp"
-    alt="CEO 2025 banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>CEO 2025</h2>
-    <h4>June 13 - June 15</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>Hungrybox</li>
-        <li>lloD</li>
-        <li>Panda</li>
-        <li>Gahtzu</li>
-        <li>Wizzrobe</li>
-        <li>Krudo</li>
-        <li>MOF</li>
-        <li>Dawson</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=9939%20Universal%20Blvd%2C%20Orlando%2C%20FL%2032819%2C%20USA"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Orlando, FL"
-      >
-        Orlando, FL </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 187
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/ceo-2025-6/event/super-smash-bros-melee"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="CEO 2025"
-        >Bracket</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="CEO 2025"
-        >Schedule</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="CEO 2025"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
 <div
   class="card"
   data-start-time="1751637600"
@@ -196,7 +60,7 @@
         data-umami-event-location="Toronto, ON"
       >
         Toronto, ON </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 773
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 775
     </p>
     <hr />
     <div class="buttons">
@@ -290,6 +154,74 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Unranked"
+        >Stream</a
+      >
+    </div>
+  </div>
+</div>
+
+<div
+  class="card"
+  data-start-time="1754578800"
+  data-end-time="1754872200"
+>
+  <img
+    src="assets/cards/supernova2025.webp"
+    alt="Supernova 2025 banner image"
+    class="image"
+  />
+  <div class="card-content">
+    <h2>Supernova 2025</h2>
+    <h4>August 07 - August 10</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr />
+    <p>
+      <a
+        class="card-location"
+        href="https://www.google.com/maps/search/?api=1&query=4320%20Chantilly%20Shopping%20Center%2C%20Chantilly%2C%20VA%2020151%2C%20USA"
+        target="_blank"
+        data-umami-event="map-link-clicked"
+        data-umami-event-location="Chantilly, VA"
+      >
+        Chantilly, VA </a
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+    </p>
+    <hr />
+    <div class="buttons">
+      <a
+        href="https://www.start.gg/tournament/supernova-2025/event/melee-1v1-singles-free-to-enter-wr-merch-included"
+        target="_blank"
+        class="card-button"
+        data-umami-event="start-gg-clicked"
+        data-umami-event-name="Supernova 2025"
+        >Bracket</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="schedule-clicked"
+        data-umami-event-name="Supernova 2025"
+        >Schedule</a
+      >
+      <a
+        href=""
+        target="_blank"
+        class="card-button hidden"
+        data-umami-event="stream-clicked"
+        data-umami-event-name="Supernova 2025"
         >Stream</a
       >
     </div>
@@ -400,7 +332,7 @@
         data-umami-event-location="Sandusky, OH"
       >
         Sandusky, OH </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 161
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 163
     </p>
     <hr />
     <div class="buttons">
@@ -426,74 +358,6 @@
         class="card-button hidden"
         data-umami-event="stream-clicked"
         data-umami-event-name="Riptide 2025"
-        >Stream</a
-      >
-    </div>
-  </div>
-</div>
-
-<div
-  class="card"
-  data-start-time="1754578800"
-  data-end-time="1754872200"
->
-  <img
-    src="assets/cards/supernova2025.webp"
-    alt="Supernova 2025 banner image"
-    class="image"
-  />
-  <div class="card-content">
-    <h2>Supernova 2025</h2>
-    <h4>August 07 - August 10</h4>
-    <div class="featured-players">
-      <u>Featured Players</u>
-      <ul class="featured-players-columns">
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-      </ul>
-    </div>
-    <hr />
-    <p>
-      <a
-        class="card-location"
-        href="https://www.google.com/maps/search/?api=1&query=4320%20Chantilly%20Shopping%20Center%2C%20Chantilly%2C%20VA%2020151%2C%20USA"
-        target="_blank"
-        data-umami-event="map-link-clicked"
-        data-umami-event-location="Chantilly, VA"
-      >
-        Chantilly, VA </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
-    </p>
-    <hr />
-    <div class="buttons">
-      <a
-        href="https://www.start.gg/tournament/supernova-2025/event/melee-1v1-singles-free-to-enter-wr-merch-included"
-        target="_blank"
-        class="card-button"
-        data-umami-event="start-gg-clicked"
-        data-umami-event-name="Supernova 2025"
-        >Bracket</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="schedule-clicked"
-        data-umami-event-name="Supernova 2025"
-        >Schedule</a
-      >
-      <a
-        href=""
-        target="_blank"
-        class="card-button hidden"
-        data-umami-event="stream-clicked"
-        data-umami-event-name="Supernova 2025"
         >Stream</a
       >
     </div>
