index.html Calendar typo

--- a/site/index.html
+++ b/site/index.html
@@ -416,7 +416,7 @@
 
       <!-- Calendar note -->
       <div class="calendar-note calendar-note-hidden">
-        <p>want upcoming melee majors on your calendar? add this link as an external url on any online calender service
+        <p>want upcoming melee majors on your calendar? add this link as an external url on any online calendar service
         </p>
         <div class="calendar-url-snippet">
           <pre>https://meleemajors.gg/calendar.ics</pre>
