feat: update goml 2025 schedule and top 8 start time

--- a/site/index.html
+++ b/site/index.html
@@ -73,9 +73,9 @@
         >Bracket</a
       >
       <a
-        href=""
+        href="https://images.start.gg/images/profileWidgetPageLayout/3279617/image-fc23d5cfa3203de0d9da023df9d8f692.png"
         target="_blank"
-        class="card-button hidden"
+        class="card-button"
         data-umami-event="schedule-clicked"
         data-umami-event-name="Get On My Level: Forever"
         >Schedule</a
@@ -128,7 +128,7 @@
         data-umami-event-location="Chicago, IL"
       >
         Chicago, IL </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 122
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 130
     </p>
     <hr />
     <div class="buttons">
@@ -332,7 +332,7 @@
         data-umami-event-location="Sandusky, OH"
       >
         Sandusky, OH </a
-      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 163
+      >&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 176
     </p>
     <hr />
     <div class="buttons">
